--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -120,8 +120,8 @@ jobs:
 
         include:
           # We test AppleClang as well, as a special case.
-          - os: macos-10.15
-            compiler: apple
+          # - os: macos-10.15
+          #   compiler: apple
           - os: macos-11
             compiler: apple
           - os: macos-12
