Add binary upload to CI workflow, pt2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -240,7 +240,7 @@ jobs:
       # -------------------------------------------------------
 
       - name: Upload Binaries
-        if: matrix.static == "true"
+        if: matrix.static == 'true'
         uses: actions/upload-artifact@v3
         with:
           name: binary-${{ matrix.os }}
