--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -127,15 +127,8 @@ jobs:
           #   compiler: apple
           - os: macos-11
             compiler: apple
-            static: "true"
           - os: macos-12
             compiler: apple
-            static: "true"
-
-          # Include extra static builds that we want for distributable binaries
-          - os: ubuntu-22.04
-            compiler: gcc-13
-            static: "true"
 
     # ==========================================================================
     #     Steps
@@ -197,10 +190,9 @@ jobs:
             sudo xcode-select --switch /Library/Developer/CommandLineTools
           fi
 
-          # For static builds, set the according CMake option. We never build static on MacOS,
-          # as that is not easy: https://stackoverflow.com/q/3801011
+          # For static builds, set the according CMake option
           export GRENEDALF_BUILD_STATIC=""
-          if [[ "${{ matrix.static }}" == "true" ]] && [[ "${{ matrix.os }}" != *"macos"* ]]; then
+          if [[ "${{ matrix.os }}" == "ubuntu-22.04" ]] && [[ "${{ matrix.compiler }}" == "gcc-13" ]]; then
             export GRENEDALF_BUILD_STATIC="-DGRENEDALF_BUILD_STATIC=ON"
           fi
 
@@ -233,7 +225,7 @@ jobs:
       # -------------------------------------------------------
 
       - name: Upload Binaries
-        if: matrix.static == 'true'
+        if: (  matrix.os == 'ubuntu-22.04' && matrix.compiler == 'gcc-13' ) || matrix.compiler == 'apple'
         uses: actions/upload-artifact@v3
         with:
           name: binary-${{ matrix.os }}
