--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -144,7 +144,7 @@ jobs:
 
       - name: Setup C++
         # Reference: https://github.com/marketplace/actions/setup-cpp-c-c
-        uses: aminya/setup-cpp@v0.36.1
+        uses: aminya/setup-cpp@v0.37.0
         if: matrix.compiler != 'apple'
         with:
           compiler: ${{ matrix.compiler }}
@@ -219,6 +219,14 @@ jobs:
           fi
 
           cmake --build ./build -- -j 2
+
+      - name: Upload Logs
+        if: always()
+        uses: actions/upload-artifact@v4.3.1
+        with:
+          name: logs-${{ matrix.os }}-${{ matrix.compiler }}
+          path: |
+            build/**/*.log
 
       # -------------------------------------------------------
       #     Upload Binaries
