--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
           - gcc-11
           - gcc-12
           - gcc-13
-          - llvm-5
+          # - llvm-5
           - llvm-6
           - llvm-7
           - llvm-8
@@ -49,6 +49,10 @@ jobs:
           - llvm-11
           - llvm-12
           - llvm-13
+          - llvm-14
+          - llvm-15
+          - llvm-16
+          - llvm-17
 
         # -------------------------------------------------------
         #     exclude
@@ -62,6 +66,14 @@ jobs:
             compiler: gcc-13
           - os: ubuntu-20.04
             compiler: llvm-13
+          - os: ubuntu-20.04
+            compiler: llvm-14
+          - os: ubuntu-20.04
+            compiler: llvm-15
+          - os: ubuntu-20.04
+            compiler: llvm-16
+          - os: ubuntu-20.04
+            compiler: llvm-17
 
           # Older GCC versions are not supported by Ubuntu any more
           - os: ubuntu-22.04
@@ -116,12 +128,30 @@ jobs:
             compiler: llvm-12
           - os: macos-12
             compiler: llvm-13
+          # - os: macos-12
+          #   compiler: llvm-14
+          # - os: macos-12
+          #   compiler: llvm-15
+          - os: macos-12
+            compiler: llvm-16
+          - os: macos-12
+            compiler: llvm-17
 
         # -------------------------------------------------------
         #     include
         # -------------------------------------------------------
 
         include:
+          # Test with the latest of both compilers and OSs
+          - os: ubuntu-latest
+            compiler: gcc
+          - os: ubuntu-latest
+            compiler: llvm
+          - os: macos-latest
+            compiler: gcc
+          - os: macos-latest
+            compiler: llvm
+
           # We test AppleClang as well, as a special case.
           # - os: macos-10.15
           #   compiler: apple
@@ -149,6 +179,12 @@ jobs:
         with:
           compiler: ${{ matrix.compiler }}
           cmake: true
+          make: true
+
+      - name: Setup C++ - AppleClang
+        if: matrix.compiler == 'apple'
+        run: |
+          brew install cmake
 
       # -------------------------------------------------------
       #     Dependencies
@@ -203,13 +239,10 @@ jobs:
       # -------------------------------------------------------
 
       - name: Build
-        # Below we use a workaround for LLVM as configured by setup-cpp, which clashes with htslib:
-        # https://github.com/samtools/htslib/issues/1527 and
-        # https://github.com/aminya/setup-cpp/issues/145
         run: |
-          if [[ ! -z "${LLVM_PATH}" ]]; then
-            export LDFLAGS=`echo ${LDFLAGS} | sed 's/"//g'`
-            export CPPFLAGS=`echo ${CPPFLAGS} | sed 's/"//g'`
+          # Weird workarounds. On some CI builds, this is needed somehow for LLVM under Ubuntu.
+          if [[ "${RUNNER_OS}" != "macOS" ]] && [[ ! -f /usr/bin/gmake ]]; then
+            sudo ln -s /usr/bin/make /usr/bin/gmake
           fi
 
           # Need to set the xcode patch here as well, as job steps don't keep status.
