Remove macos-11 llvm-14 compilation due to linker issue
See https://github.com/aminya/setup-cpp/issues/235

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -111,6 +111,8 @@ jobs:
           - os: macos-11
             compiler: llvm-13
           - os: macos-11
+            compiler: llvm-14
+          - os: macos-11
             compiler: llvm-16
           - os: macos-11
             compiler: llvm-17
