Fix broken CI run on Mac

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,11 +89,14 @@ jobs:
           - os: ubuntu-22.04
             compiler: llvm-9
 
-          # Older GCC versions are also not supported by MacOS 12 any more
+          # Older GCC versions are also not supported by MacOS 12 any more.
+          # Also excluding a broken current one for now... Fix later!
           - os: macos-12
             compiler: gcc-7
           - os: macos-12
             compiler: gcc-8
+          - os: macos-12
+            compiler: gcc-13
 
           # We also currently exclude clang from macos, as it fails with different types of
           # linker errors. As this is merely a problem in the setup, we defer solving this for now.
