--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -314,6 +314,7 @@ jobs:
           # Verify the installation
           pip list
           python --version
+          python3 --version
           # pytest
 
       - name: Run Test
