--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -297,17 +297,25 @@ jobs:
       # For the same versions that we use for the binaries above,
       # we also run the test case, comparing grenedalf against our independent implementation.
       # This covers Ubuntu and two Mac versions, so hopefully good enough.
-      - name: Install Test Dependencies
-        if: (  matrix.os == 'ubuntu-22.04' && matrix.compiler == 'gcc-13' ) || matrix.compiler == 'apple'
+      - name: Python Setup - Ubuntu
+        if: (  matrix.os == 'ubuntu-22.04' && matrix.compiler == 'gcc-13' )
         run: |
           # We do not use the github action to install python and pip,
           # see https://stackoverflow.com/a/70228289/4184258
           sudo apt-get install python3 python3-pip
 
+      - name: Python Setup - MacOS
+        if: matrix.compiler == 'apple'
+        run: |
+          brew install python
+
+      - name: Install Test Dependencies
+        if: (  matrix.os == 'ubuntu-22.04' && matrix.compiler == 'gcc-13' ) || matrix.compiler == 'apple'
+        run: |
           # Install the dependencies for the tests
           python3 -m venv venv
           source venv/bin/activate
-          pip3 install -r test/pip.txt
+          pip3 install --user -r test/pip.txt
 
           # Verify the installation
           pip3 list
