--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,155 +24,352 @@ jobs:
       #     matrix
       # -------------------------------------------------------
 
+      # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#choosing-github-hosted-runners
+      # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners/about-github-hosted-runners
+
       matrix:
+        # Need dummy entries for the matrix to pick up the variables.
+        # We later set all other combinations that we want explicitly.
+
         os:
-          # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#choosing-github-hosted-runners
-          - ubuntu-20.04
-          - ubuntu-22.04
-          - macos-11
-          - macos-12
+          - ubuntu-latest
+          - macos-latest
 
         compiler:
-          - gcc-7
-          - gcc-8
-          - gcc-9
-          - gcc-10
-          - gcc-11
-          - gcc-12
-          - gcc-13
-          # - llvm-5
-          - llvm-6
-          - llvm-7
-          - llvm-8
-          - llvm-9
-          - llvm-10
-          - llvm-11
-          - llvm-12
-          - llvm-13
-          - llvm-14
-          - llvm-15
-          - llvm-16
-          - llvm-17
+          - gcc
+          - llvm
 
         # -------------------------------------------------------
-        #     exclude
+        #     include
         # -------------------------------------------------------
 
-        exclude:
-          # Newer GCC versions are not available on all Ubuntu
+        # Instead of a matrix where we only have some combinations that work, and others that do not,
+        # we just directly opt for a list of all combinations that we actually want to test.
+        # Easier to reason about, easier to maintain, easier to extend.
+
+        # Newer compiler versions are not available on all Ubuntu, so some are excluded.
+        # Older GCC versions are also not supported by MacOS 12 any more.
+
+        # Currently, llvm-9 causes weird segfauls on Ubuntu, which do not seem to be our fault,
+        # but rather a bug in their thread forking, according to valgrind.
+        # Need to investiage further at some point. We used setup-cpp locally to install
+        # the very same version of llvm-9, and got tons of segfauls for all kind of functions.
+
+        # We also currently exclude clang from macos, as it fails with different types of
+        # linker errors. As this is merely a problem in the setup, we defer solving this for now.
+
+        include:
+
+          # -------------------------------
+          #     Ubuntu 20.04
+          # -------------------------------
+
           - os: ubuntu-20.04
-            compiler: gcc-12
+            compiler: gcc-7
+          - os: ubuntu-20.04
+            compiler: gcc-8
+          - os: ubuntu-20.04
+            compiler: gcc-9
+          - os: ubuntu-20.04
+            compiler: gcc-10
+          # Setup fails
+          # - os: ubuntu-20.04
+          #   compiler: gcc-11
+          # - os: ubuntu-20.04
+          #   compiler: gcc-12
           - os: ubuntu-20.04
             compiler: gcc-13
+          # Too new
+          # - os: ubuntu-20.04
+          #   compiler: gcc-14
+          - os: ubuntu-20.04
+            compiler: llvm-6
+          - os: ubuntu-20.04
+            compiler: llvm-7
+          - os: ubuntu-20.04
+            compiler: llvm-8
+          # Weird segfault
+          # - os: ubuntu-20.04
+          #   compiler: llvm-9
+          - os: ubuntu-20.04
+            compiler: llvm-10
+          - os: ubuntu-20.04
+            compiler: llvm-11
+          - os: ubuntu-20.04
+            compiler: llvm-12
           - os: ubuntu-20.04
             compiler: llvm-13
           - os: ubuntu-20.04
             compiler: llvm-14
           - os: ubuntu-20.04
             compiler: llvm-15
-          - os: ubuntu-20.04
-            compiler: llvm-16
+          # Setup fails
+          # - os: ubuntu-20.04
+          #   compiler: llvm-16
           - os: ubuntu-20.04
             compiler: llvm-17
-
-          # Older GCC versions are not supported by Ubuntu any more
-          - os: ubuntu-22.04
-            compiler: gcc-7
-          - os: ubuntu-22.04
-            compiler: gcc-8
-
-          # llvm-9 causes weird segfauls on Ubuntu, which do not seem to be our fault.
-          # Need to investiage further at some point. We used setup-cpp locally to install
-          # the very same version of llvm-9, and got tons of segfauls for all kind of functions...
           - os: ubuntu-20.04
-            compiler: llvm-9
-          - os: ubuntu-22.04
-            compiler: llvm-9
+            compiler: llvm-18
 
-          # Older GCC versions are also not supported by MacOS 12 any more.
-          # Also excluding a broken current one for now... Fix later!
-          - os: macos-12
-            compiler: gcc-7
-          - os: macos-12
-            compiler: gcc-8
-          - os: macos-12
+          # -------------------------------
+          #     Ubuntu 22.04
+          # -------------------------------
+
+          # Too old
+          # - os: ubuntu-22.04
+          #   compiler: gcc-7
+          # - os: ubuntu-22.04
+          #   compiler: gcc-8
+          - os: ubuntu-22.04
+            compiler: gcc-9
+          - os: ubuntu-22.04
+            compiler: gcc-10
+          - os: ubuntu-22.04
+            compiler: gcc-11
+          - os: ubuntu-22.04
+            compiler: gcc-12
+          - os: ubuntu-22.04
             compiler: gcc-13
-
-          # We also currently exclude clang from macos, as it fails with different types of
-          # linker errors. As this is merely a problem in the setup, we defer solving this for now.
-          # Wildcards do not work here, so we have to list them all... :-(
-          - os: macos-11
-            compiler: llvm-5
-          - os: macos-11
+          # Setup fails
+          # - os: ubuntu-22.04
+          #   compiler: gcc-14
+          - os: ubuntu-22.04
             compiler: llvm-6
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-7
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-8
-          - os: macos-11
-            compiler: llvm-9
-          - os: macos-11
+          # Weird segfault
+          # - os: ubuntu-22.04
+          #   compiler: llvm-9
+          - os: ubuntu-22.04
             compiler: llvm-10
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-11
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-12
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-13
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-14
-          - os: macos-11
+          - os: ubuntu-22.04
+            compiler: llvm-15
+          - os: ubuntu-22.04
             compiler: llvm-16
-          - os: macos-11
+          - os: ubuntu-22.04
             compiler: llvm-17
+          - os: ubuntu-22.04
+            compiler: llvm-18
+
+          # -------------------------------
+          #     Ubuntu 24.04
+          # -------------------------------
+
+          # Too old
+          # - os: ubuntu-24.04
+          #   compiler: gcc-7
+          # - os: ubuntu-24.04
+          #   compiler: gcc-8
+          - os: ubuntu-24.04
+            compiler: gcc-9
+          - os: ubuntu-24.04
+            compiler: gcc-10
+          - os: ubuntu-24.04
+            compiler: gcc-11
+          - os: ubuntu-24.04
+            compiler: gcc-12
+          - os: ubuntu-24.04
+            compiler: gcc-13
+          - os: ubuntu-24.04
+            compiler: gcc-14
+          # Setup fails
+          # - os: ubuntu-24.04
+          #   compiler: llvm-6
+          # - os: ubuntu-24.04
+          #   compiler: llvm-7
+          # - os: ubuntu-24.04
+          #   compiler: llvm-8
+          # - os: ubuntu-24.04
+          #   compiler: llvm-9
+          # - os: ubuntu-24.04
+          #   compiler: llvm-10
+          # - os: ubuntu-24.04
+          #   compiler: llvm-11
+          # - os: ubuntu-24.04
+          #   compiler: llvm-12
+          # - os: ubuntu-24.04
+          #   compiler: llvm-13
+          # - os: ubuntu-24.04
+          #   compiler: llvm-14
+          # - os: ubuntu-24.04
+          #   compiler: llvm-15
+          # - os: ubuntu-24.04
+          #   compiler: llvm-16
+          # - os: ubuntu-24.04
+          #   compiler: llvm-17
+          - os: ubuntu-24.04
+            compiler: llvm-18
+
+          # -------------------------------
+          #     MacOS 12
+          # -------------------------------
+
+          # Setup fails (too old?)
+          # - os: macos-12
+          #   compiler: gcc-7
+          # - os: macos-12
+          #   compiler: gcc-8
           - os: macos-12
-            compiler: llvm-5
+            compiler: gcc-9
           - os: macos-12
-            compiler: llvm-6
+            compiler: gcc-10
           - os: macos-12
-            compiler: llvm-7
+            compiler: gcc-11
           - os: macos-12
-            compiler: llvm-8
+            compiler: gcc-12
+          # Weird compiler errors
+          # - os: macos-12
+          #   compiler: gcc-13
           - os: macos-12
-            compiler: llvm-9
-          - os: macos-12
-            compiler: llvm-10
-          - os: macos-12
-            compiler: llvm-11
+            compiler: gcc-14
+          # Setup fails
+          # - os: macos-12
+          #   compiler: llvm-6
+          # - os: macos-12
+          #   compiler: llvm-7
+          # - os: macos-12
+          #   compiler: llvm-8
+          # - os: macos-12
+          #   compiler: llvm-9
+          # - os: macos-12
+          #   compiler: llvm-10
+          # - os: macos-12
+          #   compiler: llvm-11
           - os: macos-12
             compiler: llvm-12
           - os: macos-12
             compiler: llvm-13
+          - os: macos-12
+            compiler: llvm-14
+          - os: macos-12
+            compiler: llvm-15
+          # Setup fails
           # - os: macos-12
+          #   compiler: llvm-16
+          # - os: macos-12
+          #   compiler: llvm-17
+          # - os: macos-12
+          #   compiler: llvm-18
+
+          # -------------------------------
+          #     MacOS 13
+          # -------------------------------
+
+          # Setup fails
+          # - os: macos-13
+          #   compiler: gcc-7
+          # - os: macos-13
+          #   compiler: gcc-8
+          - os: macos-13
+            compiler: gcc-9
+          - os: macos-13
+            compiler: gcc-10
+          - os: macos-13
+            compiler: gcc-11
+          - os: macos-13
+            compiler: gcc-12
+          # Weird compiler errors
+          # - os: macos-13
+          #   compiler: gcc-13
+          - os: macos-13
+            compiler: gcc-14
+          # Setup fails
+          # - os: macos-13
+          #   compiler: llvm-6
+          # - os: macos-13
+          #   compiler: llvm-7
+          # - os: macos-13
+          #   compiler: llvm-8
+          # - os: macos-13
+          #   compiler: llvm-9
+          # Weird compiler errors
+          # - os: macos-13
+          #   compiler: llvm-10
+          # - os: macos-13
+          #   compiler: llvm-11
+          - os: macos-13
+            compiler: llvm-12
+          - os: macos-13
+            compiler: llvm-13
+          - os: macos-13
+            compiler: llvm-14
+          - os: macos-13
+            compiler: llvm-15
+          # Setup fails
+          # - os: macos-13
+          #   compiler: llvm-16
+          # - os: macos-13
+          #   compiler: llvm-17
+          # - os: macos-13
+          #   compiler: llvm-18
+
+          # -------------------------------
+          #     MacOS 14
+          # -------------------------------
+
+          # Setup fails for all
+          # - os: macos-14
+          #   compiler: gcc-7
+          # - os: macos-14
+          #   compiler: gcc-8
+          # - os: macos-14
+          #   compiler: gcc-9
+          # - os: macos-14
+          #   compiler: gcc-10
+          # - os: macos-14
+          #   compiler: gcc-11
+          # - os: macos-14
+          #   compiler: gcc-12
+          # - os: macos-14
+          #   compiler: gcc-13
+          # - os: macos-14
+          #   compiler: gcc-14
+          # - os: macos-14
+          #   compiler: llvm-6
+          # - os: macos-14
+          #   compiler: llvm-7
+          # - os: macos-14
+          #   compiler: llvm-8
+          # - os: macos-14
+          #   compiler: llvm-9
+          # - os: macos-14
+          #   compiler: llvm-10
+          # - os: macos-14
+          #   compiler: llvm-11
+          # - os: macos-14
+          #   compiler: llvm-12
+          # - os: macos-14
+          #   compiler: llvm-13
+          # - os: macos-14
           #   compiler: llvm-14
-          # - os: macos-12
+          # - os: macos-14
           #   compiler: llvm-15
+          # - os: macos-14
+          #   compiler: llvm-16
+          # - os: macos-14
+          #   compiler: llvm-17
+          # - os: macos-14
+          #   compiler: llvm-18
+
+          # -------------------------------
+          #     AppleClang
+          # -------------------------------
+
           - os: macos-12
-            compiler: llvm-16
-          - os: macos-12
-            compiler: llvm-17
-
-        # -------------------------------------------------------
-        #     include
-        # -------------------------------------------------------
-
-        include:
-          # Test with the latest of both compilers and OSs
-          - os: ubuntu-latest
-            compiler: gcc
-          - os: ubuntu-latest
-            compiler: llvm
-          # - os: macos-latest
-          #   compiler: gcc
-          # - os: macos-latest
-          #   compiler: llvm
-
-          # We test AppleClang as well, as a special case.
-          # - os: macos-10.15
-          #   compiler: apple
-          - os: macos-11
             compiler: apple
-          - os: macos-12
+          - os: macos-13
+            compiler: apple
+          - os: macos-14
             compiler: apple
 
     # ==========================================================================
@@ -190,7 +387,7 @@ jobs:
       - name: Setup C++
         # Reference: https://github.com/marketplace/actions/setup-cpp-c-c
         uses: aminya/setup-cpp@v0.37.0
-        if: matrix.compiler != 'apple'
+        if: ${{ matrix.compiler != 'apple' && matrix.os != 'macos-latest' }}
         with:
           compiler: ${{ matrix.compiler }}
           cmake: true
@@ -212,7 +409,9 @@ jobs:
         #    see https://github.com/aminya/setup-cpp/issues/149
         run: |
           sudo apt-get install autoconf automake zlib1g-dev libbz2-dev liblzma-dev
-          sudo apt-get install libtinfo5
+          if [[ ${{ matrix.os }} != ubuntu-24.04 ]] ; then
+              sudo apt-get install libtinfo5
+          fi
 
       - name: Install Dependencies - MacOS
         if: runner.os == 'macos'
