--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,8 +108,9 @@ jobs:
           #   compiler: llvm-16
           - os: ubuntu-20.04
             compiler: llvm-17
-          - os: ubuntu-20.04
-            compiler: llvm-18
+          # Setup fails
+          # - os: ubuntu-20.04
+          #   compiler: llvm-18
 
           # -------------------------------
           #     Ubuntu 22.04
@@ -158,8 +159,9 @@ jobs:
             compiler: llvm-16
           - os: ubuntu-22.04
             compiler: llvm-17
-          - os: ubuntu-22.04
-            compiler: llvm-18
+          # Setup fails
+          # - os: ubuntu-22.04
+          #   compiler: llvm-18
 
           # -------------------------------
           #     Ubuntu 24.04
