--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -361,9 +361,13 @@ jobs:
         # 2: clang on ubuntu 22 is not properly set up, we need libtinfo5,
         #    see https://github.com/aminya/setup-cpp/issues/149
         run: |
+          if [[ ${{ matrix.os }} == ubuntu-latest ]] ; then
+            sudo apt-get update
+            sudo apt-get install -y liblzma5
+          fi
           sudo apt-get install autoconf automake zlib1g-dev libbz2-dev liblzma-dev
           if [[ ${{ matrix.os }} != ubuntu-24.04 ]] && [[ ${{ matrix.os }} != ubuntu-latest ]] ; then
-              sudo apt-get install libtinfo5
+            sudo apt-get install libtinfo5
           fi
 
       - name: Install Dependencies - MacOS
